--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
- <% if current_user %>
+ <% if @current_user %>
   <div class="new-finstagram-post">
     <a href="/finstagram_posts/new" class="button">New Post</a>
   </div>
