--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -4,7 +4,7 @@ header {
 }
 body {
     background-color: whitesmoke;
-    font-family: 'font-family: Roboto Condensed, sans-serif';
+    font-family: 'Roboto Condensed', sans-serif;
 }
 main {
     background-color: white;
